# internal/app/handlers/task_handler.go
@@ -16,6 +16,21 @@ type TaskHandler struct {
 	ts service.ITaskService
 }
 
+// @Summary Создать задание
+// @Description Создать задание
+// @Tags tasks
+//
+// @Accept  json
+// @Produce  json
+//
+// @Param newTaskInfo body dto.NewTaskInfo true "данные нового задания"
+//
+// @Success 200  {object}  doc_structs.TaskResponse "объект задания"
+// @Failure 400  {object}  apperrors.ErrorResponse
+// @Failure 401  {object}  apperrors.ErrorResponse
+// @Failure 500  {object}  apperrors.ErrorResponse
+//
+// @Router /task/create/ [post]
 func (th TaskHandler) Create(w http.ResponseWriter, r *http.Request) {
 	rCtx := r.Context()
 
@@ -59,6 +74,79 @@ func (th TaskHandler) Create(w http.ResponseWriter, r *http.Request) {
 	r.Body.Close()
 }
 
+// @Summary Получить задание
+// @Description Получить задание
+// @Tags tasks
+//
+// @Accept  json
+// @Produce  json
+//
+// @Param taskID body dto.TaskID true "id задания"
+//
+// @Success 200  {object}  doc_structs.TaskResponse "объект задания"
+// @Failure 400  {object}  apperrors.ErrorResponse
+// @Failure 401  {object}  apperrors.ErrorResponse
+// @Failure 500  {object}  apperrors.ErrorResponse
+//
+// @Router /task/ [get]
+func (th TaskHandler) Read(w http.ResponseWriter, r *http.Request) {
+	rCtx := r.Context()
+
+	var taskID dto.TaskID
+	err := json.NewDecoder(r.Body).Decode(&taskID)
+	if err != nil {
+		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.BadRequestResponse))
+		return
+	}
+
+	_, err = govalidator.ValidateStruct(taskID)
+	if err != nil {
+		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.BadRequestResponse))
+		return
+	}
+
+	task, err := th.ts.Read(rCtx, taskID)
+	if err != nil {
+		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.ErrorMap[err]))
+		return
+	}
+
+	response := dto.JSONResponse{
+		Body: dto.JSONMap{
+			"task": task,
+		},
+	}
+
+	jsonResponse, err := json.Marshal(response)
+	if err != nil {
+		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.InternalServerErrorResponse))
+		return
+	}
+
+	_, err = w.Write(jsonResponse)
+	if err != nil {
+		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.InternalServerErrorResponse))
+		return
+	}
+
+	r.Body.Close()
+}
+
+// @Summary Обновить задание
+// @Description Обновить задание
+// @Tags tasks
+//
+// @Accept  json
+// @Produce  json
+//
+// @Param taskInfo body dto.UpdatedTaskInfo true "обновленные данные задания"
+//
+// @Success 204  {string}  string "no content"
+// @Failure 400  {object}  apperrors.ErrorResponse
+// @Failure 401  {object}  apperrors.ErrorResponse
+// @Failure 500  {object}  apperrors.ErrorResponse
+//
+// @Router /task/update/ [post]
 func (th TaskHandler) Update(w http.ResponseWriter, r *http.Request) {
 	rCtx := r.Context()
 
@@ -100,6 +188,21 @@ func (th TaskHandler) Update(w http.ResponseWriter, r *http.Request) {
 	r.Body.Close()
 }
 
+// @Summary Удалить задание
+// @Description Удалить задание
+// @Tags tasks
+//
+// @Accept  json
+// @Produce  json
+//
+// @Param taskID body dto.TaskID true "id задания"
+//
+// @Success 204  {string}  string "no content"
+// @Failure 400  {object}  apperrors.ErrorResponse
+// @Failure 401  {object}  apperrors.ErrorResponse
+// @Failure 500  {object}  apperrors.ErrorResponse
+//
+// @Router /task/delete/ [delete]
 func (th TaskHandler) Delete(w http.ResponseWriter, r *http.Request) {
 	rCtx := r.Context()
 
@@ -142,50 +245,6 @@ func (th TaskHandler) Delete(w http.ResponseWriter, r *http.Request) {
 }
 
 /*
-func (th TaskHandler) Read(w http.ResponseWriter, r *http.Request) {
-	rCtx := r.Context()
-
-	var taskID dto.TaskID
-	err := json.NewDecoder(r.Body).Decode(&taskID)
-	if err != nil {
-		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.BadRequestResponse))
-		return
-	}
-
-	_, err = govalidator.ValidateStruct(taskID)
-	if err != nil {
-		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.BadRequestResponse))
-		return
-	}
-
-	task, err := th.ts.ReadWithUsers(rCtx, taskID)
-	if err != nil {
-		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.ErrorMap[err]))
-		return
-	}
-
-	response := dto.JSONResponse{
-		Body: dto.JSONMap{
-			"board": board,
-		},
-	}
-
-	jsonResponse, err := json.Marshal(response)
-	if err != nil {
-		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.InternalServerErrorResponse))
-		return
-	}
-
-	_, err = w.Write(jsonResponse)
-	if err != nil {
-		*r = *r.WithContext(context.WithValue(rCtx, dto.ErrorKey, apperrors.InternalServerErrorResponse))
-		return
-	}
-
-	r.Body.Close()
-}
-
-f
 // @Produce  jsonunc (lh TaskHandler) ReadListsInBoard(w http.ResponseWriter, r *http.Request) {
 	rCtx := r.Context()
 
